--- a/about/index.html
+++ b/about/index.html
@@ -23,6 +23,17 @@ type: about
         <h2>온라인 저지 프로필</h2>
         {% include judge_profile.html boj_id="youngyangze" atcoder_id="blobaww" %}
     </div>
+
+        <h2>대회 참가 및 수상</h2>
+        <ul>
+            <li>
+                경시대회
+                <ul>
+                    <li><b>제1회 청소년 IT경시대회</b> 대상</li>
+                </ul>
+            </li>
+            <li onclick="openTab('competition-view')">(전체 보기)</li>
+        </ul>
 </div>
 
 <style>
