--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ type: about
             <li>Blog: <a href="https://ventvinyl.github.io/">ventvinyl.github.io</a></li>
         </ul>
         <h2>온라인 저지 프로필</h2>
-        {% include judge_profile.html boj_id="youngyangze" atcoder_id="ainta" %}
+        {% include judge_profile.html boj_id="youngyangze" atcoder_id="blobaww" %}
     </div>
 
         <h2>대회 참가 및 수상</h2>
